--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,7 +7,7 @@
 
 :root {
     --bg-primary: rgba(255, 255, 255, 0.1);
-    --color: rgba(255, 255, 255, 0.9);
+    --color: rgba(255, 255, 255, 0.95);
     --tert: #7CFF99;
 }
 
@@ -15,15 +16,25 @@ a {
     color: var(--tert);
 }
 
+img {
+    display: inline-block;
+    max-width: 100%;
+}
+
+ul,
+ol {
+    margin-left: 2rem;
+}
+
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #0A1823;
-    color: white;
+    color: var(--color);
     font-size: 17px;
-    line-height: 160%;
+    line-height: 1.6;
 }
 
 .App {
@@ -33,15 +44,25 @@ body {
 }
 
 .editor {
-    display: block;
     height: 100vh;
-    width: 50vw;
+    width: 50%;
+    background-color: var(--bg-primary);
+}
+
+.editor textarea {
+    display: block;
+    height: 100%;
+    width: 100%;
     resize: none;
-    color: white;
     padding: 1.3rem;
     border: none;
     font-size: 17px;
     background-color: var(--bg-primary);
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: var(--color);
+    line-height: 1.6;
 }
 
 .editor:focus {
@@ -49,9 +70,23 @@ body {
     color: white;
 }
 
+.resizer-wrap {
+    height: 100vh;
+    width: 10px;
+    background: black;
+}
+
+.resizer {
+    height: 100vh;
+    width: 10px;
+    background: transparent;
+    opacity: 0;
+    cursor: col-resize;
+}
+
 .previewer {
     height: 100vh;
-    width: 50vw;
+    flex: 1;
     padding: 1.3rem;
     overflow-x: hidden;
     overflow-y: auto;
