--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,8 +6,9 @@
 }
 
 :root {
-    --bg-primary: rgba(255, 255, 255, 0.1);
-    --color: rgba(255, 255, 255, 0.95);
+    --bg-primary: rgb(3, 3, 3);
+    --bg-nav: rgba(255, 255, 255, 0.075);
+    --color: rgba(255, 255, 255, 0.85);
     --tert: #7CFF99;
 }
 
@@ -21,6 +22,13 @@ img {
     max-width: 100%;
 }
 
+h1,
+h2,
+h3 {
+    font-weight: bold;
+    color: rgba(255, 255, 255, 0.95);
+}
+
 ul,
 ol {
     margin-left: 2rem;
@@ -28,25 +36,26 @@ ol {
 
 body {
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    padding: 3.75rem 0 0 0;
+    font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #0A1823;
+    background-color: #040c13;
     color: var(--color);
     font-size: 17px;
     line-height: 1.6;
 }
 
-.App {
-    height: 100vh;
+.contents {
+    height: calc(100vh - 3.75rem);
     display: flex;
     overflow: hidden;
 }
 
 .editor {
-    height: 100vh;
+    height: calc(100vh - 3.75rem);
     width: 50%;
-    background-color: var(--bg-primary);
+    min-width: 15rem;
 }
 
 .editor textarea {
@@ -55,29 +64,29 @@ body {
     width: 100%;
     resize: none;
     padding: 1.3rem;
-    border: none;
+    border: 0px solid transparent;
     font-size: 17px;
-    background-color: var(--bg-primary);
-    font-family: 'Roboto', sans-serif;
+    background-color: transparent;
+    font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: var(--color);
     line-height: 1.6;
 }
 
-.editor:focus {
-    outline: none;
-    color: white;
+.editor textarea:focus {
+    outline: none !important;
 }
 
 .resizer-wrap {
     height: 100vh;
     width: 10px;
-    background: black;
+    background: rgba(255, 255, 255, 0.13);
+    border: none;
 }
 
 .resizer {
-    height: 100vh;
+    height: calc(100vh - 3.75rem);
     width: 10px;
     background: transparent;
     opacity: 0;
@@ -85,9 +94,78 @@ body {
 }
 
 .previewer {
-    height: 100vh;
+    height: calc(100vh - 4.375rem);
     flex: 1;
     padding: 1.3rem;
     overflow-x: hidden;
     overflow-y: auto;
+    min-width: 15rem;
+    min-width: 15rem;
+}
+
+
+/* nav styles */
+
+header {
+    height: 3.75rem;
+    background-color: var(--bg-nav);
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
+header h1 {
+    font-size: 1.5rem;
+}
+
+header nav {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav .logo__wrap {
+    display: flex;
+    margin: 0 1.25rem;
+}
+
+header nav .logo__wrap img {
+    display: inline-block;
+}
+
+header nav .logo__wrap h1 {
+    display: inline-block;
+    padding-left: 1rem;
+    margin-bottom: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* buttons */
+
+button,
+.btn {
+    background: #76ff94;
+    height: 2.2rem;
+    margin: 0.5rem 1.25rem;
+    padding: 0 0.6rem;
+    font-weight: bold;
+    border-radius: 0.2rem;
+    min-width: 5rem;
+    max-width: 8rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    cursor: pointer;
+    opacity: 0.9;
+    color: rgba(0, 0, 0, 0.85);
+    width: 100%;
+}
+
+button,
+.btn:hover {
+    opacity: 1;
 }
